<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".zikhlum_tiak_sehchhumtu_enkawldan"
    android:background="@drawable/bg3"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize"
        android:layout_margin="@dimen/natnaLanDanLehEnkawlDanMargin"
        android:text="@string/z8c1"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize"
        android:layout_margin="@dimen/natnaLanDanLehEnkawlDanMargin"
        android:text="@string/z8c2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize"
        android:layout_margin="@dimen/natnaLanDanLehEnkawlDanMargin"
        android:text="@string/z8c3"/>


</LinearLayout>