<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".thingfanghma">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/background1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hriThlengNatna"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_marginLeft="15dp"/>


            <Space
                android:layout_height="20dp"
                android:layout_width="match_parent"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/papaya_idm1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:onClick="VutbuakClick"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t1"
                android:layout_marginLeft="15dp"/>

            <Space
                android:layout_height="20dp"
                android:layout_width="match_parent"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/papaya_idm2"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:onClick="a_hnah_kir_click"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t2"
                android:layout_marginLeft="15dp"/>

            <Space
                android:layout_height="30dp"
                android:layout_width="match_parent"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/papaya_idm3"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:onClick="a_hnah_rau_click"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t3"
                android:layout_marginLeft="15dp"/>

            <Space
                android:layout_height="30dp"
                android:layout_width="match_parent"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/papaya_idm4"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:onClick="rahNatnaClick"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t4"
                android:layout_marginLeft="15dp"/>

            <Space
                android:layout_height="30dp"
                android:layout_width="match_parent"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/background2">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rannungThlengNatna"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_marginLeft="15dp" />


            <Space
                android:layout_height="20dp"
                android:layout_width="match_parent"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/papaya_ipm1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:onClick="bawmtuVarClick"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t5"
                android:layout_marginLeft="15dp"/>

            <Space
                android:layout_height="20dp"
                android:layout_width="match_parent"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/papaya_ipm2"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:onClick="thlawkVar_click"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t6"
                android:layout_marginLeft="15dp"/>

            <Space
                android:layout_height="30dp"
                android:layout_width="match_parent"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/papaya_ipm3"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:onClick="khau_Click"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t7"
                android:layout_marginLeft="15dp"/>

            <Space
                android:layout_height="30dp"
                android:layout_width="match_parent"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/papaya_ipm4"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:onClick="hnahTuiHnagDawtuClick"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t8"
                android:layout_marginLeft="15dp"/>

            <Space
                android:layout_height="30dp"
                android:layout_width="match_parent"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

    </ScrollView>