<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ZikhlumNew">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/card_view1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/background1">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hriThlengNatna"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:layout_marginLeft="15dp"/>


                    <Space
                        android:layout_height="20dp"
                        android:layout_width="match_parent"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/natnaButtonSize"
                        android:background="@drawable/zikhlum_natna1"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:onClick="A_hnah_tawih_click"

                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/z1"
                        android:layout_marginLeft="15dp"/>

                    <Space
                        android:layout_height="20dp"
                        android:layout_width="match_parent"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/natnaButtonSize"
                        android:background="@drawable/zikhlum_natna2"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:onClick="hnar_rau_click"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/z2"
                        android:layout_marginLeft="15dp"/>

                    <Space
                        android:layout_height="30dp"
                        android:layout_width="match_parent"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/natnaButtonSize"
                        android:background="@drawable/zikhlum_natna3"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:onClick="a_tiak_lawng_click"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/z3"
                        android:layout_marginLeft="15dp"/>

                    <Space
                        android:layout_height="30dp"
                        android:layout_width="match_parent"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/natnaButtonSize"
                        android:background="@drawable/zikhlum_natna4"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:onClick="a_hnahhnuailam_var_click"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/z4"
                        android:layout_marginLeft="15dp"/>

                    <Space
                        android:layout_height="30dp"
                        android:layout_width="match_parent"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/background2">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rannungThlengNatna"
                        android:textStyle="bold"
                        android:textSize="25dp"
                        android:layout_marginLeft="15dp"/>


                    <Space
                        android:layout_height="20dp"
                        android:layout_width="match_parent"
                        />


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/natnaButtonSize"
                        android:background="@drawable/zikhlum_hri1"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:onClick="zikhlum_hrik_Click"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/z5"
                        android:layout_marginLeft="15dp"/>

                    <Space
                        android:layout_height="30dp"
                        android:layout_width="match_parent"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/natnaButtonSize"
                        android:background="@drawable/zikhlum_hri2"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:onClick="pangangte_click"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/z6"
                        android:layout_marginLeft="15dp"/>

                    <Space
                        android:layout_height="30dp"
                        android:layout_width="match_parent"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/natnaButtonSize"
                        android:background="@drawable/zikhlum_hri3"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:onClick="hnah_car_khawmtu_click"

                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/z7"
                        android:layout_marginLeft="15dp"/>

                    <Space
                        android:layout_height="20dp"
                        android:layout_width="match_parent"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/natnaButtonSize"
                        android:background="@drawable/zikhlum_hri4"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:onClick="a_tiak_sehchhumtu_click"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/z8"
                        android:layout_marginLeft="15dp"/>

                    <Space
                        android:layout_height="30dp"
                        android:layout_width="match_parent"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/natnaButtonSize"
                        android:background="@drawable/zikhlum_hri5"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:onClick="pangang_hring_click"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/z9"
                        android:layout_marginLeft="15dp"/>

                    <Space
                        android:layout_height="30dp"
                        android:layout_width="match_parent"
                        />


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>